# ssb-ccl

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
include/: ccl.h  elevation_ccl.h  ssb_ccl.h
src/: ccl.cpp  elevation_ccl.cpp  ssb_ccl.cpp
test/: backward_scan.cpp  first_scan.cpp
