<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
    <name>ssb-ccl</name>
    <version>2.1.3</version>
    <description>
    </description>
    <license>None</license>
    <author>Hirotaka Hosogaya</author>
    <maintainer email="hosogaya.hirotaka@gmail.com">Hirotaka Hosogaya</maintainer>

    <depend>Eigen3</depend>
    <depend>ifopt</depend>
    <!--  The following tags are recommended by REP-136  -->
    <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
        <rosdoc config="${prefix}/doc/rosdoc.yaml"/>
    </export>
</package>